--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -106,3 +106,71 @@ docker_network_minio_name: "{{ docker_container_minio_name }}_backend"
 # docker_network_minio_attachable: yes
 # docker_network_minio_enable_ipv6: no
 # docker_network_minio_internal: no
+
+
+# -------------
+# Restic Backup
+# -------------
+# @var docker_container_minio_restic_enable:description: >
+# Enable restic backup for the container's mounted volumes.
+# @end
+docker_container_minio_restic_enable: false
+
+# @var docker_container_minio_restic_s3_endpoint:description: >
+# Minio S3 endpoint for restic backup storage.
+#
+# Example: 
+# 
+# ```yaml
+#
+# docker_container__base__restic_s3_endpoint: "https://minio-backup.{{ dns_domain }}"
+#
+# docker_container_minio_restic_s3_endpoint: "{{ docker_container__base__restic_s3_endpoint }}"
+#
+# ```
+#
+# @end
+docker_container_minio_restic_s3_endpoint: "{{ docker_container__base__restic_s3_endpoint }}"
+
+# @var docker_container_minio_restic_s3_bucket_name:description: >
+# Minio S3 bucket name for restic backup storage.
+# @end
+docker_container_minio_restic_s3_bucket_name: "restic-{{ docker_container_minio_name }}"
+
+# @var docker_container_minio_restic_s3_repo:description: >
+# Minio S3 repo URL for restic backup storage.
+# @end
+docker_container_minio_restic_s3_repo: "s3:{{ docker_container_minio_restic_s3_endpoint }}/{{ docker_container_minio_restic_s3_bucket_name }}"
+
+# @var docker_container_minio_restic_s3_repo_password:description: >
+# Minio S3 repo password for restic backup storage.
+# @end
+docker_container_minio_restic_s3_repo_password: "{{ docker_container__base__restic_s3_repo_password }}"
+
+# @var docker_container_minio_restic_s3_repo_access_key:description: >
+# Minio S3 repo access key for restic backup storage.
+# @end
+docker_container_minio_restic_s3_repo_access_key: "{{ docker_container__base__restic_s3_repo_access_key }}"
+# @var docker_container_minio_restic_s3_repo_secret_key:description: >
+# Minio S3 repo secret key for restic backup storage.
+# @end
+docker_container_minio_restic_s3_repo_secret_key: "{{ docker_container__base__restic_s3_repo_secret_key }}"
+
+# docker_container_minio_restic_s3_seed_repo: "s3:{{ docker_container__base__restic_s3_seed_endpoint }}/{{ docker_container_minio_restic_s3_bucket_name }}"
+# docker_container_minio_restic_s3_seed_repo_password: "{{ docker_container__base__restic_s3_repo_password }}"
+
+# @var docker_container_minio_restic_retention:description: >
+# Retention settions for `restic forget` after the `restic backup`.
+# @end
+docker_container_minio_restic_retention:
+  keep_last: 1
+  # keep_hourly: 1
+  keep_daily: 7
+  keep_weekly: 4
+  # keep_monthly: 6
+  # keep_yearly
+
+# @var docker_container_minio_restic_tag:description: >
+# Tag for the `restic backup` command
+# @end
+docker_container_minio_restic_tag: "{{ docker_container_minio_name }}"
