--- a/tasks/prereq.yml
+++ b/tasks/prereq.yml
@@ -1,4 +1,8 @@
 ---
+# - name: Install docker python sdk
+#   ansible.builtin.pip:
+#     name: docker
+
 - name: Install docker python sdk
-  ansible.builtin.pip:
-    name: docker
+  ansible.builtin.apt:
+    name: python3-docker
