--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -19,9 +19,9 @@
   community.docker.docker_network:
     name: "{{ docker_network_minio_name }}"
     driver: "{{ docker_network_minio_driver | default('bridge') }}"
-    attachable: "{{ docker_network_minio_attachable | default('yes') }}"
-    enable_ipv6: "{{ docker_network_minio_enable_ipv6 | default('no') }}"
-    internal: "{{ docker_network_minio_internal | default('no') }}"
+    attachable: "{{ docker_network_minio_attachable | default(true) }}"
+    enable_ipv6: "{{ docker_network_minio_enable_ipv6 | default(false) }}"
+    internal: "{{ docker_network_minio_internal | default(false) }}"
     state: present
 
 
@@ -32,26 +32,26 @@
     comparisons: "{{ docker_container_minio_comparisons }}"
     image: "{{ docker_container_minio_image }}"
     state: "{{ docker_container_minio_state | default('started') }}"
-    recreate: "{{ docker_container_minio_recreate | default('no') }}"
-    restart: "{{ docker_container_minio_restart | default('no') }}"
+    recreate: "{{ docker_container_minio_recreate | default(false) }}"
+    restart: "{{ docker_container_minio_restart | default(false) }}"
     restart_policy: "{{ docker_container_minio_restart_policy | default('always') }}"
     container_default_behavior: no_defaults
-    auto_remove: "{{ docker_container_minio_auto_remove | default('no') }}"
-    detach: "{{ docker_container_minio_detach | default('yes') }}"
-    init: "{{ docker_container_minio_init | default('no') }}"
-    interactive: "{{ docker_container_minio_interactive | default('no') }}"
-    keep_volumes: "{{ docker_container_minio_keep_volumes | default('yes') }}"
+    auto_remove: "{{ docker_container_minio_auto_remove | default(false) }}"
+    detach: "{{ docker_container_minio_detach | default(true) }}"
+    init: "{{ docker_container_minio_init | default(false) }}"
+    interactive: "{{ docker_container_minio_interactive | default(false) }}"
+    keep_volumes: "{{ docker_container_minio_keep_volumes | default(true) }}"
     memory: "{{ docker_container_minio_memory | default('0') }}"
-    paused: "{{ docker_container_minio_paused | default('no') }}"
-    privileged: "{{ docker_container_minio_privileged | default('no') }}"
-    read_only: "{{ docker_container_minio_read_only | default('no') }}"
-    tty: "{{ docker_container_minio_tty | default('no') }}"
+    paused: "{{ docker_container_minio_paused | default(false) }}"
+    privileged: "{{ docker_container_minio_privileged | default(false) }}"
+    read_only: "{{ docker_container_minio_read_only | default(false) }}"
+    tty: "{{ docker_container_minio_tty | default(false) }}"
     env_file: "{{ docker_container_minio_env_file | default(omit) }}"
     env: "{{ docker_container_minio_env | default(omit) }}"
     volumes: "{{ docker_container_minio_volumes | default(omit) }}"
     labels: "{{ docker_container_minio_labels | default(omit) }}"
-    networks_cli_compatible: "{{ docker_container_minio_networks_cli_compatible | default('yes') }}"
+    networks_cli_compatible: "{{ docker_container_minio_networks_cli_compatible | default(true) }}"
     network_mode: "{{ docker_network_minio_name }}"
-    pull: "{{ docker_container_minio_pull | default('no') }}"
+    pull: "{{ docker_container_minio_pull | default(false) }}"
     networks: "{{ docker_container_minio_networks }}"
     published_ports: "{{ docker_container_minio_ports | default(omit) }}"
